--- a/res/layout/activity_caluculator.xml
+++ b/res/layout/activity_caluculator.xml
@@ -222,6 +222,7 @@
 			<Button
 				android:id="@+id/keypadAdd"
 				android:text="+"
+				android:onClick="addKeyOnClick"
 				android:padding="0dp"
 				android:textSize="24sp"
 				android:layout_height="match_parent"
