--- a/res/layout/activity_caluculator.xml
+++ b/res/layout/activity_caluculator.xml
@@ -214,6 +214,7 @@
 			<Button
 				android:id="@+id/keypadEq"
 				android:text="="
+				android:onClick="equalKeyOnClick"
 				android:padding="0dp"
 				android:textSize="24sp"
 				android:layout_height="match_parent"
